[package]
name = "csv_processor_wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
# csv = "1.1"
acea_f_helpers = { path = "../../acea_f_helpers" }
wasm-bindgen = "0.2"
web-sys = {"version" = "0.3", features = ["console"]}
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
